# strands-apify

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pre_release.yml  publish.yml  release.yml  run_code_checks.yml
docs-submission/: README.md  strands-apify.mdx
src/strands_apify/: __init__.py  core.py  search_crawling.py  social_media.py  utils.py
tests/: conftest.py  test_core.py  test_search_crawling.py  test_social_media.py
