[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-apify"
version = "0.1.0"
description = "Apify web scraping, social media, search and automation tools for Strands Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Apify", email = "support@apify.com"}
]
keywords = ["strands", "agents", "ai", "tool", "apify", "web-scraping", "automation", "social-media", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "strands-agents>=1.0.0",
    "apify-client>=1.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/apify/strands-apify"
Documentation = "https://github.com/apify/strands-apify#readme"
Repository = "https://github.com/apify/strands-apify"
Issues = "https://github.com/apify/strands-apify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "ruff>=0.11.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "hatch",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strands_apify"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "ruff>=0.11.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = "ruff check src tests"
format = "ruff format --check src tests"
format-fix = "ruff format src tests"
typecheck = "mypy src"
prepare = ["format", "lint", "typecheck", "test"]

[tool.ruff]
line-length = 120
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
